# flink-multinode

./: .env_SEQABC_inflated_0  .env_SEQABC_inflated_1  .gitignore  README.md  rolling_test.sh
.github/workflows/: update_readme.yml
deploying/: kill_local  run_local  run_local_0  run_local_1  test_mess.sh
deploying/example_inputs/: count_matches.sh  get_duration.sh
deploying/example_inputs/multiquery/: config_0.json  config_1.json  config_2.json  config_3.json  config_4.json  py.err  trace_1.csv  trace_2.csv  (+2 more)
docs/: notes.md
java-cep/: dependency-reduced-pom.xml  pom.xml
mama-module/: pom.xml
mama-module/coordinator/: dependency-reduced-pom.xml  pom.xml
mama-module/event/: dependency-reduced-pom.xml  pom.xml
mama-module/java-cep/: dependency-reduced-pom.xml  pom.xml
mama-module/monitoring/: dependency-reduced-pom.xml  pom.xml  start_monitors.sh  totalRates0.csv  totalRates1.csv  totalRates4.csv
mama-module/shared-config/: dependency-reduced-pom.xml  pom.xml
mama-module/test/: dependency-reduced-pom.xml  pom.xml
monitoring/: dependency-reduced-pom.xml  pom.xml  totalRates0.csv  totalRates1.csv  totalRates4.csv
py-plt/: plot_rates.py
pyplt/: plot_all_sent.py  plot_events.py  plot_rates.py  plot_received_events_on_multisink_nodes.py  plot_sent_by_event.py
python/: barplot.py  generate_matrices.py  generate_matrices.sh  generate_mixed_traces.sh  linechart.py  mix_traces.py  parse_logs.py  plot_all_sent.py  plot_latencies.py  plot_sent_by_event.py  plot_sent_by_event_by_node.py  pyproject.toml  send_eventstream.py
tests/: check_ids.py  test.bats
(+76 files in other folders)
